--- a/wdlm/package.json
+++ b/wdlm/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.0.0-alpha.6",
-    "react-native": "0.44.2"
+    "react-native": "^0.44.2",
+    "react-native-storage": "^0.2.1"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
