--- a/mywd/package.json
+++ b/mywd/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wdlm",
+  "name": "mywd",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -8,16 +8,15 @@
   },
   "dependencies": {
     "react": "16.0.0-alpha.6",
-    "react-native": "^0.44.2",
-    "react-native-storage": "^0.2.1"
+    "react-native": "0.43.4"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
     "babel-preset-react-native": "1.9.2",
     "jest": "20.0.4",
+    "react-addons-update": "^15.5.2",
     "react-native-button": "^1.8.2",
     "react-native-sk-countdown": "^1.0.1",
-    "react-native-storage": "^0.2.1",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^4.2.0",
     "react-test-renderer": "16.0.0-alpha.6"
