--- a/wdrn/package.json
+++ b/wdrn/package.json
@@ -10,6 +10,9 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.4",
     "react-native-image-picker": "^0.26.3",
+    "react-native-orientation": "git+https://github.com/yamill/react-native-orientation.git",
+    "react-native-percentage-circle": "^1.0.6",
+    "react-native-picker": "^4.0.19",
     "react-native-progress": "^3.2.1",
     "react-native-qrcode": "^0.2.3",
     "react-native-yunpeng-alipay": "^1.1.4"
