--- a/wdrn/.babelrc
+++ b/wdrn/.babelrc
@@ -1,3 +1,9 @@
 {
-"presets": ["react-native"]
+    "presets": [
+        "react-native"
+    ],
+    "plugins": [
+        "transform-class-properties",
+        "babel-plugin-transform-decorators-legacy"
+    ]
 }
