--- a/wdrn/package.json
+++ b/wdrn/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.4",
     "react-native-image-picker": "^0.26.3",
