--- a/wdrn/package.json
+++ b/wdrn/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "dateformat": "^2.0.0",
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.4",
     "react-native-image-picker": "^0.26.3",
