--- a/wdrn/android/settings.gradle
+++ b/wdrn/android/settings.gradle
@@ -1,11 +1,11 @@
 rootProject.name = 'wdrn'
+include ':react-native-alipay'
+project(':react-native-alipay').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-alipay/android')
 
 include ':react-native-picker'
 project(':react-native-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-picker/android')
 include ':react-native-vector-icons'
 project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
-include ':react-native-yunpeng-alipay'
-project(':react-native-yunpeng-alipay').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-yunpeng-alipay/android')
 include ':react-native-image-picker'
 project(':react-native-image-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-picker/android')
 
