--- a/wdrn/package.json
+++ b/wdrn/package.json
@@ -17,7 +17,8 @@
     "react-native-percentage-circle": "^1.0.6",
     "react-native-picker": "^4.0.19",
     "react-native-progress": "^3.2.1",
-    "react-native-qrcode": "^0.2.3"
+    "react-native-qrcode": "^0.2.3",
+    "react-native-simple-modal": "^6.0.0"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
